# AllDemoDepository

./: README.md  settings.gradle
CustomDialogDemo/: build.gradle
CustomDialogDemo/src/main/: AndroidManifest.xml
CustomView/: build.gradle
CustomView/src/main/: AndroidManifest.xml
FileUtilTestDemo/: build.gradle
FileUtilTestDemo/src/main/: AndroidManifest.xml
FiveChess/: FiveChess.docx  build.gradle
FiveChess/src/main/: AndroidManifest.xml
LocationDemo/: build.gradle
LocationDemo/src/main/: AndroidManifest.xml
MediaPlayerServiceDemo/: build.gradle
MediaPlayerServiceDemo/src/main/: AndroidManifest.xml
Note/: ArraysTest.java  ConvertFleEncoding.java  adb命令.txt  chatai-Perference的基本使用.md  ic_parallel_horizon.xml
PoiHandleExcel/: build.gradle
RePluginDemo/: RePluginDemo.jks  build.gradle  settings.gradle
RePluginDemo/Oneplugin/: build.gradle
RePluginDemo/app/: build.gradle
ReadContactsDemo/: build.gradle
SoLibDemo/: build.gradle
SoLibDemo/src/main/: AndroidManifest.xml  CMakeLists.txt
SoLibDemo/src/main/java/com/hb/solibdemo/: MainActivity.java
SoLibDemo/src/main/jni/: mysolib.c
SoLibDemo/src/main/res/layout/: activity_main.xml
Utils/: ArraysTest.java  ConvertFleEncoding.java  ExcelFileUtils.java  FileUtil.java  LocationUtil.java  LogUtil.java  Other.java  PermissionsUtil.java  TextUtils.java
Utils/dialog/: AlertDialogUtil.java  custom_alert_dialog.xml  custom_dialog_bg.xml  custom_dialog_button_bg.xml
VideoDemo/: build.gradle
ViewPager2Demo/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
(+154 files in other folders)
